--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,9 +9,27 @@
         <link rel="stylesheet" href="./style.css" />
         <script src="./main.js"></script>
     </head>
+
     <body>
+        <span class="puntaje">Puntaje: <span id="puntaje">000</span> </span>
         <main>
-            <h1>Estamos listos!</h1>
+            <h2 id="pregunta">Mi pregunta es...</h2>
+            <h3 id="categoria">Categoría...</h3>
+
+            <form id="form">
+                <input type="text" id="respuesta" name="" placeholder="Escribe tu respuesta acá..." id="">
+                <button type="submit">Enviar</button>
+            </form>
+
+            <div id="negative">
+                <span>x</span>
+                <p id="answer">La respuesta es...</p>
+            </div>
+            <div id="correct">
+                <span>Bien</span>
+                <p>¡Excelente trabajo!</p>
+            </div>
         </main>
     </body>
+
 </html>
