Promises cata nico (#3)
* Adicion de funcones

* incluir mensaje de éxito o fracaso

* rollback cambios del fetch

Co-authored-by: natpoveda <ndpoveda@gmail.com>
Co-authored-by: Nicolás M. Pardo <nicolasm@nikodermus.media>

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                     placeholder="Escribe tu respuesta acá..."
                     id=""
                 />
-                <button type="submit">Enviar</button>
+                <button id="send" type="submit" class="disabled">Enviar</button>
             </form>
 
             <div id="negative">
